--- a/1-2,图片数据建模流程范例.md
+++ b/1-2,图片数据建模流程范例.md
@@ -48,6 +48,7 @@ def load_image(img_path,size = (32,32)):
 ```
 
 ```python
+
 #使用并行化预处理num_parallel_calls 和预存数据prefetch来提升性能
 ds_train = tf.data.Dataset.list_files("./data/cifar2/train/*/*.jpg") \
            .map(load_image, num_parallel_calls=tf.data.experimental.AUTOTUNE) \
@@ -61,6 +62,12 @@ ds_test = tf.data.Dataset.list_files("./data/cifar2/test/*/*.jpg") \
 
 ```
 
+
+## tony ---- AUTOTUNE根据空闲CPU自动决定并行数量
+## tony ---- 关于shuffle、batch、repeat的讲解 https://blog.csdn.net/ningyanggege/article/details/91492581
+## tony ---- 关于prefetch
+ *Note: Like other Dataset methods, prefetch operates on the elements of the input dataset. It has no concept of examples vs. batches. examples.prefetch(2) will prefetch two elements (2 examples), while examples.batch(20).prefetch(2) will prefetch 2 elements (2 batches, of 20 examples each).
+ 
 ```python
 %matplotlib inline
 %config InlineBackend.figure_format = 'svg'
